# BlockDesigner

./: .gitignore  .gitmessage.txt  CHANGELOG.md  README.md  package.json  scv-2.0.0.tgz
BlockDesigner_Core/: .gitignore
BlockDesigner_Core/systemc-2.3.1_BD/: Makefile.in  aclocal.m4  configure  configure.ac
BlockDesigner_Core/systemc-2.3.1_BD/src/BD_core/: BD_core.h  Makefile.am  Makefile.in
BlockDesigner_Core/systemc-2.3.1_BD/src/BD_core/PlatformAPI/: BDPlatform.cpp  BDPlatform.h  Makefile.am  Makefile.in  PMInfoJsonParser.cpp  PMInfoJsonParser.h  PMModuleListGenerator.cpp  PMModuleListGenerator.h
BlockDesigner_Core/systemc-2.3.1_BD/src/BD_core/PlatformAPI/json/: json.h
BlockDesigner_Core/systemc-2.3.1_BD/src/BD_core/SimulationAPI/: BDDI.cpp  BDDI.h  BDDIBase.h  BDDITypes.h  BDMMI.cpp  BDMMI.h  BDSim.cpp  BDSim.h  ChannelManager.cpp  ChannelManager.h  ChannelMap.cpp  ChannelMap.h  Control_Signal.cpp  Control_Signal.h  Makefile.am  Makefile.in  SoftwareDisplayer.cpp  SoftwareDisplayer.h  SoftwareLoader.cpp  SoftwareLoader.h  SoftwareProfiler.cpp  SoftwareProfiler.h
BlockDesigner_Core/systemc-2.3.1_BD/src/BD_core/SimulationHandler/: AllSimulationHandler.h  CommandHandler.cpp  CommandHandler.h  CommandQueue.cpp  CommandQueue.h  Makefile.am  Makefile.in  ResponseHandler.cpp  ResponseHandler.h  SimulationHandler.cpp  SimulationHandler.h  SimulationHandler_type.h
BlockDesigner_Core/systemc-2.3.1_BD/src/BD_core/gui/: Makefile.am  Makefile.in  StartPlatformManagerThreads.cpp  StartPlatformManagerThreads.h  StartSimulationThreads.cpp  StartSimulationThreads.h  test.cpp  test.h
BlockDesigner_Core/systemc-2.3.1_BD/src/BD_core/manager/: AllManager.h  BDDIJsonManager.cpp  BDDIJsonManager.h  BDDIManager.cpp  BDDIManager.h  BDPMDInitManager.cpp  BDPMDInitManager.h  CallBackManager.cpp  CallBackManager.h  ExecutionManager.cpp  ExecutionManager.h  Makefile.am  Makefile.in  ModuleConnectionManager.cpp  ModuleConnectionManager.h  ModuleConnector.cpp  ModuleConnector.h  ModuleListManager.cpp  ModuleListManager.h  ModuleLoader.cpp  ModuleLoader.h  PMMLGenerationManager.cpp  PMMLGenerationManager.h  PMModuleListManager.cpp  PMModuleListManager.h  SignalTraceManager.cpp  SignalTraceManager.h  SoftwareLoadingManager.cpp  SoftwareLoadingManager.h  SoftwareManager.cpp  SoftwareManager.h  TopManager.h  TopManagerBase.h
BlockDesigner_Plug-in/: .classpath  .project  CM0DS.hex  CM0DS.txt  build.properties  helloworld.elf  plugin.xml
BlockDesigner_Plug-in/images/: Thumbs.db
BlockDesigner_Plug-in/lib/: View_PlatformManager.java
JNI_Interface/ModuleWizard/: .cproject  .project  BDConfig.h  BDModule.cpp  BDModule.h  BDParameter.cpp  BDParameter.h  BDPort.cpp  BDPort.h  BDPortGroup.cpp  BDPortGroup.h  BDProcess.cpp  BDProcess.h  BDRegister.cpp  BDRegister.h  BDSensitive.cpp  BDSensitive.h  BDSignal.cpp  BDSignal.h  BDWriter.cpp  BDWriter.h  BlockDesigner.h  com_twoblock_blockdesigner_modulewizard_CW_Wizard.cpp  com_twoblock_blockdesigner_modulewizard_CW_Wizard.h  jsoncpp.cpp  main.cpp
JNI_Interface/SimulationEnvironment/: .Hanlder_CallBack.cpp.swp  .cproject  .project  Handler_Command.cpp  Handler_Command.h  Handler_SimulationInitThread.cpp  Handler_SimulationInitThread.h  Hanlder_CallBack.cpp  Hanlder_CallBack.h
TestPMview/: .classpath  .project  modulelist.PMML  swt_dnd_about_Twoblock.cpp  swt_dnd_about_Twoblock.h  test.BDPMD  test.MPM  test.PMML
TestPMview/.metadata/: version.ini
TestPMview/images/: Thumbs.db
TestPMview/src/: Thumbs.db
TestPlatform/: AHBDCD.cpp  AHBDCD.h  AHBMUX.cpp  AHBMUX.h  AHB_Lite.cpp  AHB_Lite.h  AHB_Lite_BDDI.h  AllModuleMake.csh  CM0DS.elf  CORTEXM0DS.v  Software_Profiler.cpp  ahbl2mem.cpp  ahbl2mem.h  ahbl2mem_1.cpp  ahbl2mem_1.h  ahbl2mem_1_BDDI.h  ahbl2mem_BDDI.cpp  bd_command_script.sh  console.cpp  console.d  console.h  console_BDDI.cpp  console_BDDI.h  cortexm0ds_tb.v  cpu_register_test.csh  helloworld.c  make_shared_object.csh  mem_interface.v  memory_map.h  profiling.csh  remove_test.csh  sc_main.cpp  systemc.csh  tb.cpp  tb.h  type.h  wave.gtkw
TestPlatform/AHB/: AHB.cpp  AHB.h  AHBDCD.cpp  AHBDCD.h  AHBMUX.cpp  AHB_ARBITER_M3.h  AHB_BDDI.cpp  (+7 more)
jni_struct/: .classpath  .project
scv-2.0.0/: configure
testCommand/: EntireInstall.sh  SCVInstall.sh  onlysystemcInstall.sh  semiInstall.sh
(+618 files in other folders)
